feat: doc-type page completed
